<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/signin_logo_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="64sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:maxLines="1"
                android:text="@string/app_short_description"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="email"
                android:hint="@string/signin_email_edittext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/signin_password_edittext"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signin_request_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/signin_request_button"/>

    </LinearLayout>

</ScrollView>